[package]
name = "logfmt_nostd"
version = "0.2.0"
edition = "2024"
authors = ["Michael Scholten <michael-scholten@hotmail.nl>"]
description = "Parses logfmt messages without std."
license-file = "License.txt"
repository = "https://github.com/41Leahcim/logfmt_nostd"
readme = "README.md"
keywords = ["parser", "no_std"]
categories = ["Encoding", "No standard library", "Parser implementations"]

[dependencies]
heapless = "0.8"
